## Makefile.am -- Process this file with automake to produce Makefile.in
AUTOMAKE_OPTIONS = foreign

INCLUDES=-I.

bin_PROGRAMS = superstring testresult

superstring_SOURCES = bottom.hh ch_debug.cc ch_debug.hh gensufftree.cc gensufftree.hh greedyalgo.cc greedyalgo.hh heap.cc heap.hh heappair.cc heappair.hh mapping.cc mapping.hh output.cc output.hh stringtable.cc stringtable.hh superstring.cc tank.cc tank.hh testsuite.cc testsuite.hh trace.hh

testresult_SOURCES = testresult.cc
